#700 fixed width of revenue model labels that overlapped the price input

--- a/laterpay/asset_sources/scss/pages/_post_edit.scss
+++ b/laterpay/asset_sources/scss/pages/_post_edit.scss
@@ -66,6 +66,10 @@
     font-size: 1.5em;
 }
 
+.lp_revenue-model__list {
+    width: ($fs * 3);
+}
+
 .lp_is-disabled + .lp_revenue-model,
 .lp_revenue-model:first-child {
     margin-top: 18px;
